Fix spacing

--- a/ui/scss/component/_membership.scss
+++ b/ui/scss/component/_membership.scss
@@ -1019,6 +1019,7 @@
     background-color: rgba(var(--color-header-button-base), 0.6);
     padding: var(--spacing-m);
     box-sizing: border-box;
+    margin-bottom:var(--spacing-l);
 
     div {
       margin-bottom: var(--spacing-s);
